fix low term and barchart order.

--- a/src/main/resources/templates/article-detail.html
+++ b/src/main/resources/templates/article-detail.html
@@ -195,6 +195,16 @@
         }
     }
 
+    fillSearchBar();
+
+    function fillSearchBar(){
+        const searchBar = document.querySelector("#search");
+        const referer = document.referrer;
+        const index = referer.indexOf('keyword=');
+        if(index!==-1){
+            searchBar.value = referer.slice(index+8);
+        }
+    }
 </script>
 </body>
 </html>
