fix redundant related person

--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -161,9 +161,11 @@
                         }
                     },
                     force: {
-                        initLayout:'force',
-                        repulsion: 500,
-                        edgeLength: [30,100]
+                        // initLayout:'force',
+                        // repulsion: 500,
+                        // edgeLength: [30,100]
+                        edgeLength: 60,
+                        repulsion: 300
                     },
                     edgeSymbol:['none', 'arrow'],
                     emphasis: {
