--- a/src/main/resources/templates/admin-validate.html
+++ b/src/main/resources/templates/admin-validate.html
@@ -27,7 +27,7 @@
 						</div>
 					</div>
 					<div class="col-6">
-						<button class="btn btn-dark float-right"><a href="login.html">Logout</a></button>
+						<button class="btn btn-dark float-right" onclick="logout()">Logout</button>
 					</div>
 				</div>
 			</div>
@@ -56,11 +56,9 @@
 
 					</tbody>
 				</table>
-				<button class="btn btn-secondary mt-5" onclick="reUpload()">Replace File</button>
-				<button class="btn btn-dark ml-2 mt-5" onclick="update()">Complete Upload</button>
-				<div class="alert alert-secondary row  ml-2 mt-5" role="alert" id="alert" style="display:none">
-					Starting to update Neo4j. return in &nbsp<span id="time">5</span>&nbsp seconds.
-				</div>
+				<button class="btn btn-secondary mt-5" onclick="reUpload()">Back</button>
+				<button class="btn btn-dark ml-2 mt-5" onclick="update()">Confirm Upload</button>
+				<div class="alert alert-secondary mt-3" role="alert" id="alert" style="display: none"></div>
 			</div>
 		</div>
 	</div>
@@ -68,27 +66,23 @@
 </body>
 <script>
 	let i = 5;
+	const updating = 'Updating database...Please stay on this page, you will be auto redirected to dashboard once the update is complete.';
 	function update(){
+		$("#alert").text(updating).show();
 		$.get("/update",data=>{
-			console.log(data);
-		})
-		$("#alert").show();
-		setTimeout(d=>{
 			window.location.href = "/admin-dash";
-		},5000);
-		after();
+		})
 	}
-	function after(){
-		$("#time").empty().append(" "+i+" ");
-		i=i-1;
-		setTimeout(function(){
-			after();
-		},1000);
-	}
+
 	function reUpload(){
 		$.get("/invalid",data=>{
 			console.log(data);
 			window.location.href = "/admin-dash";
+		})
+	}
+	function logout() {
+		$.get("/logout", data => {
+			window.location.href = "/login";
 		})
 	}
 </script>
