--- a/src/main/resources/templates/journal-detail.html
+++ b/src/main/resources/templates/journal-detail.html
@@ -15,20 +15,20 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
 </head>
 
-<body class="article-bg">
+<body class="journal-bg">
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-8">
             <div class="row pt-0 pb-2 pt-md-4">
                 <div class="col-12 col-md-4 col-lg-3 my-auto">
                     <div class="logo py-5 py-md-0 ">
-                        <a href="/">
+                        <a href="index.html">
                             <img src="images/graphs-logo.svg" class="mx-auto mx-md-0">
                         </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <div class="form-group form-search mb-0 mr-6">
+                    <div class="form-group form-search mb-0 mr-5 pr-3">
                         <span class="fa fa-search form-icon"></span>
                         <input type="text" id="search" class="form-control"
                                placeholder="Search person, article, journal...">
@@ -41,7 +41,6 @@
                                     id="journal"></span> results in <em>Journal</em></button>
                             <button type="button" class="dropdown-item disabled" id="alert0"><i> <em>0</em> result is
                                 found</i></button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -49,19 +48,15 @@
     </div>
     <div class="row pb-5 pb-md-4">
         <div class="col-12 col-lg-8">
-            <div class="card-m card-article">
+            <div class="card-m card-journal">
                 <div class="row">
                     <div class="col-2 col-lg-1">
-                        <span class="far fa-file-alt card-icon"></span>
+                        <span class="fa fa-book card-icon"></span>
                     </div>
-                    <div class="col-10 col-lg-11" th:object="${aDetailVO.article}">
-                        <h4 class="pb-3" th:text="*{title}">Defining “Fake News” A typology of
-                            scholarly definitions</h4>
-                        <p th:if="*{authors!=null}" th:text="*{authors[0].person.name}">EC Tandoc Jr, ZW Lim, R Ling</p>
-                        <p class="ml-5"><b>Published In</b></p>
-                        <p class="ml-3" th:text="*{year}">2018</p>
-                        <p class="ml-5"><b>Journal</b></p>
-                        <p class="ml-3" th:text="*{journal!=null?journal.title:'N.A'}">Digital Journalism</p>
+                    <div class="col-10 col-lg-11">
+                        <h4 class="pb-3" th:text="${jDetailVO.title}">Digital Journalism</h4>
+                        <p><b>Articles</b></p>
+                        <p class="ml-3" th:text="${jDetailVO.counter}">345</p>
                     </div>
                 </div>
             </div>
@@ -72,26 +67,15 @@
         <div class="col-12 col-lg-4">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-12">
-                    <div class="card-m" th:if="${aDetailVO.article.journal!=null}">
-                        <h5>Related Journal</h5>
-                        <!--                        ToDo-->
-                        <a th:href="|journal-detail?title=${aDetailVO.article.journal.title}|" class="card-hover">
-                            <div class="card-s card-journal card-s-journal">
-                                <span class="fa fa-book card-icon"></span>
-                                <div class="card-s-info ml-5">
-                                    <h6 class="mb-1" th:text="${aDetailVO.article.journal.title}">Digital
-                                        Journalism</h6>
-                                    <p><b>Articles</b></p>
-                                    <p class="ml-2" th:text="${aDetailVO.jCounter}">345</p>
-                                </div>
-                            </div>
-                        </a>
+                    <div class="card-m">
+                        <h5>Articles</h5>
+                        <div id="column-chart-journal" class="pt-4"></div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-12">
                     <div class="card-m">
                         <h5>Related Persons</h5>
-                        <div th:each="rp:${aDetailVO.relatedPersons}">
+                        <div th:each="rp:${jDetailVO.relatedPerson}">
                             <a class="card-hover" th:href="|person-detail?name=${rp.name}|">
                                 <div class="card-s card-person card-s-person">
                                     <span class="fa fa-user-circle card-icon"></span>
@@ -110,12 +94,10 @@
         </div>
     </div>
 </div>
-
 <script src="js/search.js"></script>
-<script src="js/column-chart-person.js"></script>
 <script th:inline="javascript">
     window.onload = function () {
-        const graph = /*[[${aDetailVO.echartsVO}]]*/ "";
+        const graph = /*[[${jDetailVO.echartsVO}]]*/ "";
         console.log(graph);
         const dom = document.getElementById("graphContainer");
         const myChart = echarts.init(dom);
@@ -139,7 +121,8 @@
                 subtext: 'Default layout',
                 top: 'bottom',
                 left: 'right'
-            },tooltip: {
+            },
+            tooltip: {
                 position: 'top',
                 confine:true ,
                 formatter: function (d) {
@@ -211,18 +194,146 @@
         if (option && typeof option === 'object') {
             myChart.setOption(option);
         }
-    }
 
-    fillSearchBar();
+        renderBar();
 
-    function fillSearchBar(){
-        const searchBar = document.querySelector("#search");
-        const referer = document.referrer;
-        const index = referer.indexOf('keyword=');
-        if(index!==-1){
-            searchBar.value = referer.slice(index+8).replace('%20',' ');
+        function renderBar() {
+            // set the dimensions and margins of the graph
+            var margin = {top: 0, right: 0, bottom: 30, left: 0},
+                width = 800 - margin.left - margin.right,
+                height = 500 - margin.top - margin.bottom;
+
+            // set the ranges
+            var x = d3.scaleBand()
+                .range([0, width])
+                .padding(0.4);
+            var y = d3.scaleLinear()
+                .range([height, 0]);
+
+            var tooltip = d3.select("body").append("div");
+
+            // append the svg object to the divivsion
+            var svg = d3.select("#column-chart-journal").append("svg")
+                .attr('preserveAspectRatio', 'xMinYMin meet')
+                .attr(
+                    'viewBox',
+                    '0 0 ' +
+                    (width + margin.left + margin.right) +
+                    ' ' +
+                    (height + margin.top + margin.bottom)
+                )
+                .append("g")
+                .attr("transform",
+                    "translate(" + margin.left + "," + margin.top + ")");
+
+            const bgGradient = svg
+                .append('linearGradient')
+                .attr('id', 'bg-gradient')
+                .attr('gradientTransform', 'rotate(90)');
+            bgGradient
+                .append('stop')
+                .attr('stop-color', '#fd1d1d')
+                .attr('offset', '0%');
+            bgGradient
+                .append('stop')
+                .attr('stop-color', '#9c0063')
+                .attr('offset', '100%');
+
+            let data = [];
+            let temp = new Map();
+            graph.nodes.forEach(d => {
+                if (d.category === 1 && d.value !== '0') {
+                    d.value = d.value.substr(5);
+                    if (temp.get(d.value) === undefined) {
+                        temp.set(d.value, 1);
+                    } else {
+                        temp.set(d.value, temp.get(d.value)+1);
+                    }
+                }
+            })
+            temp.forEach(function (value, key) {
+                data.push({travellers: value, period: key});
+            });
+            console.log(data);
+
+            // format the data
+            data.forEach(function (d) {
+                d.travellers = +d.travellers;
+            });
+
+            data.sort((o1,o2)=>{
+                if(o1['period']>o2['period']){
+                    return 1;
+                }else {
+                    return -1;
+                }
+            });
+            console.log(data);
+
+            // Scale the range of the data in the domains
+            x.domain(data.map(function (d) {
+                return d.period;
+            }));
+            y.domain([0, d3.max(data, function (d) {
+                return d.travellers;
+            })]);
+
+            var formatComma = d3.format(",");
+
+            // append the rectangles for the bar chart
+            svg.selectAll(".bar")
+                .data(data)
+                .enter().append("rect")
+                .attr("fill", "rgba(76, 142, 230, 1)")
+                .attr("rx", 25)
+                .attr("x", function (d) {
+                    return x(d.period);
+                })
+                .attr("width", x.bandwidth())
+                .attr("y", function (d) {
+                    return y(d.travellers);
+                })
+                .attr("height", function (d) {
+                    return height - y(d.travellers);
+                })
+                //add tooltip
+                .on("mousemove", function (d) {
+                    tooltip
+                        .attr("class", "bar-tooltip")
+                        .style("left", d3.event.pageX + 5 + "px")
+                        .style("top", d3.event.pageY - 80 + "px")
+                        .style("display", "inline-block")
+                        .html(`Number of articles: ${d.travellers}`);
+                })
+                .on("mouseout", function (d) {
+                    tooltip.style("display", "none");
+                });
+
+            // add the x Axis
+            svg.append("g")
+                .attr("class", "bar-chart-axis")
+                .attr("transform", "translate(0," + height + ")")
+                .call(d3.axisBottom(x))
+                .call(g => g.select(".domain").remove());
+
         }
+
+        fillSearchBar();
+
+        function fillSearchBar() {
+            const searchBar = document.querySelector("#search");
+            const referer = document.referrer;
+            const index = referer.indexOf('keyword=');
+            if (index !== -1) {
+                searchBar.value = referer.slice(index + 8).replace('%20', ' ');
+            }
+        }
+
     }
+
+
+
+
 </script>
 </body>
 </html>
