--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -106,6 +106,9 @@
     fillSearchBar();
 
     function renderGraph() {
+
+        let nodeMap = {};
+
         const dom = document.getElementById("graphContainer");
         const myChart = echarts.init(dom);
         const app = {};
@@ -120,12 +123,10 @@
         });
         graph.nodes.forEach(function (node) {
             node.category = parseInt(node.category);
-            if (node.category === 1) {
-                node.value = "Year: " + node.value;
-            }
             node.label = {show: false};
+            // construct id,name
+            nodeMap[node.id] = node.name;
         })
-
         option = {
             title: {
                 text: ' ',
@@ -137,34 +138,57 @@
                 position: 'top',
                 confine: true,
                 formatter: function (d) {
-                    console.log(d);
-                    let terms = d.name.split(' ');
-                    console.log(terms);
-                    let result = '';
-                    let len = 0;
-                    for (let i = 0; i < terms.length; i++) {
-                        if(len+terms[i].length+1>65){
-                            result += '<br>';
-                            len = 0;
+                    if(d.dataType==='node'){
+                        let terms = d.name.split(' ');
+                        let result = '';
+                        let len = 0;
+                        for (let i = 0; i < terms.length; i++) {
+                            if(result.indexOf('<br>')===-1){
+                                if(len+terms[i].length+1>37){
+                                    result += '<br>';
+                                    len = 0;
+                                }
+                            }else{
+                                if(len+terms[i].length+1>43){
+                                    result += '<br>';
+                                    len = 0;
+                                }
+                            }
+                            result += terms[i]+' ';
+                            len += terms[i].length+1;
                         }
-                        result += terms[i]+' ';
-                        len += terms[i].length+1;
-                    }
-                    if (d.data.category === 0 || d.data.category === 3) {
-                        let gender = 'N.A';
-
-                        if (d.gender !== undefined) {
-                            gender = d.value;
+                        console.log(d);
+                        if (d.data.category === 0 || d.data.category === 3) {
+                            return `<p><b>Name:&nbsp</b> ${result}</p><br>
+                                <p><b>Gender:&nbsp</b>${d.data.gender}</p><br>
+                                <p><b>Status:&nbsp</b>${d.data.gender}</p>`
+                        } else if (d.data.category === 1) {
+                            let year = d.data.year!==undefined?d.data.year:'N.A';
+                            return `<p><b>Title:&nbsp</b>${result}</p><br>
+                                <p><b>Year:&nbsp</b>${year}</p>`;
+                        } else if (d.data.categories===2){
+                            return `<p><b>Title:&nbsp</b>${result}</p>`;
                         }
-                        return result +
-                            "<br>" + "<em>Gender: <em>" + gender;
-                    } else if (d.data.category === 1) {
-                        return result + "<br>" + d.value;
-                    } else {
-                        return "<div style='display:block;word-break: break-all;word-wrap: break-word;white-space:pre-wrap'>" + d.name + "</div>";
+                    }else if(d.dataType==='edge'){
+                        let source = nodeMap[d.data.source];
+                        let target = nodeMap[d.data.target];
+                        source = source.length>17?source.slice(0,17)+'...':source;
+                        target = target.length>17?target.slice(0,17)+'...':source;
+                        const order = d.data.order;
+                        const tooltip = `<p>${source}<b>&nbsp→&nbsp</b>${target}</p><br>
+                                         <p><b>Type:&nbsp</b></p>${d.data.type}`;
+                        if(d.data.type==='WROTE'){
+                            return tooltip+`<br><p><b>Order:&nbsp</b>${order}</p>`
+                        }else{
+                            return tooltip;
+                        }
                     }
                 },
-                extraCssText: 'width:500px;'
+                extraCssText: 'width:350px;',
+                textStyle:{
+                    fontFamily : 'poppins',
+                    fontSize: 14
+                }
             },
             toolbox: {
                 show: true,
@@ -270,19 +294,17 @@
         let data = [];
         let temp = new Map();
         graph.nodes.forEach(d => {
-            if (d.category === 1 && d.value !== '0') {
-                d.value = d.value.substr(5);
-                if (temp.get(d.value) === undefined) {
-                    temp.set(d.value, 1);
+            if (d.category === 1 && d.year !== '0') {
+                if (temp.get(d.year) === undefined) {
+                    temp.set(d.year, 1);
                 } else {
-                    temp.set(d.value, temp.get(d.value) + 1);
+                    temp.set(d.year, temp.get(d.year) + 1);
                 }
             }
         })
         temp.forEach(function (value, key) {
             data.push({travellers: value, period: key});
         });
-        console.log(data);
 
         // format the data
         data.forEach(function (d) {
@@ -296,7 +318,6 @@
                 return -1;
             }
         });
-        console.log(data);
 
         // Scale the range of the data in the domains
         x.domain(data.map(function (d) {
