--- a/src/main/resources/templates/person-detail.html
+++ b/src/main/resources/templates/person-detail.html
@@ -318,6 +318,8 @@
                 return -1;
             }
         });
+        //only show the latest ten years
+        data = data.slice(0,10);
 
         // Scale the range of the data in the domains
         x.domain(data.map(function (d) {
